--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -8,10 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.Fragments.RefTripsFragment">
+    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.Fragments.TripsFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewRefTrips"
+        android:id="@+id/recyclerViewTrips"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
