--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,9 @@
     <color name="btn_login_bg">#eceef1</color>
     <color name="lbl_name">#333333</color>
     <color name="btn_logut_bg">#ff6861</color>
+
+
+    <color name="colorBackgroundCardView">#f0f2ea</color>
+    <color name="viewBg">#f1f5f8</color>
+    <color name="trip_title">#4c4c4c</color>
 </resources>
