--- a/app/src/main/res/layout/cardview_trip.xml
+++ b/app/src/main/res/layout/cardview_trip.xml
@@ -1,65 +1,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:weightSum="1">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="79dp"
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         android:elevation="3dp"
         card_view:cardCornerRadius="@dimen/card_album_radius">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/thumbnail_cardview_trip"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
+                android:layout_width="62dp"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="8dp"
                 android:clickable="true"
                 android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/txtView_name_trip"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/thumbnail_cardview_trip"
-                android:paddingLeft="@dimen/album_title_padding"
-                android:paddingRight="@dimen/album_title_padding"
-                android:paddingTop="@dimen/album_title_padding"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="11dp"
+                android:autoText="false"
+                android:padding="10dp"
                 android:text="Name of the trip"
-                android:textStyle="bold"
+                android:textAlignment="center"
                 android:textColor="@color/trip_title"
-                android:textSize="@dimen/trip_title" />
+                android:textSize="@dimen/trip_title"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txtView_distance_trip"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/txtView_name_reftrip"
-                android:layout_alignRight="@+id/txtView_name_reftrip"
-                android:layout_below="@id/txtView_name_trip"
-                android:paddingBottom="@dimen/songs_count_padding_bottom"
-                android:paddingLeft="@dimen/album_title_padding"
-                android:paddingRight="@dimen/album_title_padding"
+                android:layout_height="match_parent"
+                android:layout_marginTop="18dp"
                 android:text="Distance"
-                android:textSize="@dimen/songs_count" />
+                android:textAlignment="center"
+                android:textSize="@dimen/songs_count"
+                android:textStyle="italic" />
 
-            <ImageView
-                android:id="@+id/menuCardViewTrip"
-                android:layout_width="@dimen/ic_album_overflow_width"
-                android:layout_height="@dimen/ic_album_overflow_height"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/thumbnail_cardview_trip"
-                android:layout_marginTop="@dimen/ic_album_overflow_margin_top"
-                android:scaleType="centerCrop"
-                android:src="@drawable/menu" />
-
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
