--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,5 +27,6 @@
 
     <color name="colorBackgroundCardView">#f0f2ea</color>
     <color name="viewBg">#f1f5f8</color>
+    <color name="colorDeleteCardView">#ff0000</color>
     <color name="trip_title">#4c4c4c</color>
 </resources>
