--- a/app/src/main/res/layout/cardview_trip.xml
+++ b/app/src/main/res/layout/cardview_trip.xml
@@ -2,7 +2,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="1">
+    android:background="@drawable/selector_cardview"
+    android:clickable="true">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
