--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.Authentication.SignUpActivity">
+    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.authentication.SignUpActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
