--- a/app/src/main/res/layout/fragment_creation_trip.xml
+++ b/app/src/main/res/layout/fragment_creation_trip.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.Fragments.MapFragment">
+    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.fragments.MapFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
