--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.Fragments.MapFragment">
+    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.fragments.MapFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
