--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.Fragments.TripsFragment">
+    tools:context="fr.univtln.cniobechoudayer.pimpmytrip.fragments.TripsFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewTrips"
