--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                android:text="Corentin"
+                android:text="@string/pseudoUser"
                 />
             ​
             <TextView
@@ -64,7 +64,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-                android:text="Registered the 22/22/22"
+                android:text="@string/titleMemberSince"
                 android:textColor="@android:color/white"
                 />
             ​
@@ -81,14 +81,21 @@
         android:gravity="center_horizontal"
         app:layout_scrollFlags="scroll|enterAlways|snap"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        android:orientation="vertical">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Stats"
+            android:text="@string/titleStats"
             android:background="@color/colorAccent"
             android:gravity="center|center_horizontal|center_vertical"
             android:textSize="30sp"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listViewStats">
+
+        </ListView>
 
     </LinearLayout>
     ​
