--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -53,9 +53,9 @@
             ​
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/textViewPseudoUser"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                android:text="@string/pseudoUser"
                 />
             ​
             <TextView
@@ -64,7 +64,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-                android:text="@string/titleMemberSince"
+                android:id="@+id/textViewEmailUser"
                 android:textColor="@android:color/white"
                 />
             ​
