--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -112,6 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
             android:text="@string/change_email"
             android:textStyle="bold" />
 
@@ -121,6 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
             android:text="@string/change_password"
             android:textStyle="bold" />
 
@@ -130,6 +132,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
             android:text="@string/send_password_reset_email"
             android:textStyle="bold" />
 
@@ -139,6 +142,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
             android:text="@string/remove_user"
             android:textStyle="bold" />
 
@@ -148,7 +152,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
             android:text="@string/revoke_google_access"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/change_language"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
+            android:text="@string/btn_change_language"
+            android:textColor="@android:color/white"
             android:textStyle="bold" />
 
         <Button
@@ -162,16 +178,7 @@
             android:textColor="@android:color/white"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/change_language"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorPrimary"
-            android:text="@string/btn_change_language"
-            android:textColor="@android:color/white"
-            android:textStyle="bold" />
+
 
     </LinearLayout>
 
